fixed button sizes on mobile devices

--- a/mini_project_4/mccleary_mp4.css
+++ b/mini_project_4/mccleary_mp4.css
@@ -34,10 +34,13 @@ section {
 
 button {
 	padding: 4px;
+	width: 150px;
+	height: 100px;
 }
 
 button > img {
 	width: 150px;
+	height: 100px;
 }
 
 ul {
